--- a/react-app/src/components/context/Modal.css
+++ b/react-app/src/components/context/Modal.css
@@ -17,6 +17,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 200;
   }
 
   #modal-background {
