--- a/react-app/src/components/sightings/sightings.css
+++ b/react-app/src/components/sightings/sightings.css
@@ -2,7 +2,7 @@
   margin-top: 20px;
   width: 1050px;
   margin-left: 275px;
-  margin-top: 850px;
+  margin-top: 50px;
   /* from Medium */
   min-height: 90vh;
   font-family: medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
